# hermes

./: .gitignore  CLAUDE.md  Makefile  README.md  pipeline.yaml  pyproject.toml  run_hermes.sh
.github/workflows/: deploy-dashboard.yml
agents/: _complete_worker.py  classification_agent.py  db_lock.py  dispatch_agent.py  graph.py  llm_client.py  monitoring_agent.py  rerouting_agent.py  run_telemetry.py  schemas.py  sla_risk_agent.py  state.py  telemetry.py
agents/prompts/: dispatch.txt  ingestion.txt  monitoring.txt  rerouting.txt  sla_risk.txt  system_core.yaml
agents/tools/: __init__.py  notification.py  solver_bridge.py  telemetry_lookup.py
assets/agents/: run_agents.py
assets/ingestion/: seed_data.py
assets/optimization/: run_solver.py
assets/quality/: check_demand_positive.sql  check_orders_freshness.sql  check_time_windows_valid.sql
assets/transforms/: build_cvrptw_input.sql
config/: .bruin.yml  .env.example
dashboard/: dashboard.py  evidence.config.json  evidence.config.yaml  hermes_dashboard.html  package-lock.json  package.json
dashboard/pages/: events.md  fleet.md  index.md  routes.md  routes_map.md  telemetry.md
dashboard/public/: routes_map.html
dashboard/sources/hermes_db/: agent_logs.sql  connection.yaml  fleet.sql  nodes.sql  processed_events.sql  raw_events.sql  route_solutions.sql  (+1 more)
dashboard/src/: app.css
dashboard/static/: routes_map.html
events/simulator/: disruption_generator.py  event_schemas.py
optimization/: cvrptw_solver.py  generate_map.py  solution_writer.py
optimization/tests/: test_solution_feasibility.py
(+1 files in other folders)
